# bluckboster-etl-fionn-grant-raphael-ruben-tomasz

./: .env.dev  .env.test  .gitignore  draft_tasks.txt  pyproject.toml
config/: db_config.py  env_config.py
data/clean/: actor.csv  address.csv  city.csv  country.csv  customer.csv  film.csv  film_actor.csv  film_category.csv  inventory.csv  rental.csv
notebooks/: transform.ipynb
scripts/: run_etl.py
sql/: extract_actor.sql  extract_address.sql  extract_category.sql  extract_city.sql  extract_country.sql  extract_customer.sql  extract_film.sql  extract_film_actor.sql  extract_film_category.sql  extract_inventory.sql  extract_payment.sql  extract_rental.sql
src/extract/: extract.py  extract_actor.py  extract_address.py  extract_category.py  extract_city.py  extract_country.py  extract_customer.py  extract_film.py  extract_film_actor.py  extract_film_category.py  extract_inventory.py  extract_payment.py  extract_rental.py
src/transform/: transform.py
visualisations/: streamlit_visualisations.py
